# basicdb

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
basicdb/: __init__.py  basicdb.py  db_adapter.py  entities.py  exceptions.py  sql_adapter.py  utils.py
tests/: test_basicdb.py  test_extra_packing.py
