[tool.poetry]
name = "basicdb"
version = "0.0.1"
description = ""
authors = ["Ludwig Schmidt <ludwigschmidt2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.0"
objectstash = "^0.1"
sqlalchemy = "^1.3.19"
sqlalchemy_utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
