[tool.poetry]
name = "basicdb"
version = "0.0.13"
description = "A simple database and key/value store wrapper"
authors = ["Ludwig Schmidt <ludwigschmidt2@gmail.com>"]
homepage = "https://github.com/ludwigschmidt/basicdb"
repository = "https://github.com/ludwigschmidt/basicdb"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.0"
objectstash = "^0.1"
sqlalchemy = "^1.4"
sqlalchemy_utils = "^0.37"
psycopg2-binary = "^2.8.6"
boto3 = "^1.14.38"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
